force-app/main/default/objects/Ortho_KPI__c/Ortho_KPI__c.object-meta.xml
<CustomObject>
    <label>Ortho KPI</label>
    <nameField>
        <displayFormat>OKPI-{00000}</displayFormat>
        <label>Ortho KPI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ortho KPIs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>