force-app/main/default/objects/Ortho_KPI__c/fields/KPI_Current__c.field-meta.xml
<CustomField>
    <fullName>KPI_Current__c</fullName>
    <description>Value of the current KPI measure</description>
    <label>KPI Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>