force-app/main/default/objects/Ortho_KPI__c/fields/KPI_Label__c.field-meta.xml
<CustomField>
    <fullName>KPI_Label__c</fullName>
    <description>Label for the KPI value (e.g. &quot;January&quot; for a Monthly KPI</description>
    <encryptionScheme>None</encryptionScheme>
    <label>KPI Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>