force-app/main/default/objects/Ortho_KPI__c/fields/KPI_Previous__c.field-meta.xml
<CustomField>
    <fullName>KPI_Previous__c</fullName>
    <description>Previous KPI value</description>
    <label>KPI Previous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>