force-app/main/default/objects/Ortho_KPI__c/fields/KPI_Target__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target__c</fullName>
    <description>Target KPI value</description>
    <label>KPI Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>