force-app/main/default/objects/Ortho_KPI__c/fields/KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>KPI_Type__c</fullName>
    <description>KPI type (Target, Year-Over-Year)</description>
    <label>KPI Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Year-Over-Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>