force-app/main/default/objects/Ortho_KPI__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product related to the KPI measure</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cement</fullName>
            </value>
            <value>
                <fullName>Early Intervention</fullName>
            </value>
            <value>
                <fullName>Extremities</fullName>
            </value>
            <value>
                <fullName>Foot &amp; Ankle</fullName>
            </value>
            <value>
                <fullName>Hips</fullName>
            </value>
            <value>
                <fullName>Knees</fullName>
            </value>
            <value>
                <fullName>LARGE JOINT</fullName>
            </value>
            <value>
                <fullName>Non-Recon</fullName>
            </value>
            <value>
                <fullName>Recon</fullName>
            </value>
            <value>
                <fullName>Sports Medicine</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>UPPER EXTREMITIES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>