force-app/main/default/objects/Ortho_KPI__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <description>Timeframe for KPI value</description>
    <label>Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Yearly - Without Quarter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>