force-app/main/default/objects/Ortho_KPI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KPI_Label__c</columns>
    <columns>KPI_Current__c</columns>
    <columns>KPI_Previous__c</columns>
    <columns>KPI_Target__c</columns>
    <columns>KPI_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Product__c</columns>
    <columns>Timeframe__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>